crates/service/tests/diagnostics/snapshots/features__diagnostics__unreachable__br_if_c.snap
---
source: crates/service/tests/diagnostics/unreachable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 10,
          "character": 8
        },
        "end": {
          "line": 10,
          "character": 11
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    }
  ]
}
