crates/service/tests/diagnostics/snapshots/features__diagnostics__unreachable__exception.snap
---
source: crates/service/tests/diagnostics/unreachable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 8
        },
        "end": {
          "line": 7,
          "character": 11
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 4
        },
        "end": {
          "line": 10,
          "character": 7
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 15,
          "character": 8
        },
        "end": {
          "line": 15,
          "character": 11
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 23,
          "character": 8
        },
        "end": {
          "line": 23,
          "character": 11
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 31,
          "character": 6
        },
        "end": {
          "line": 31,
          "character": 14
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    }
  ]
}
