crates/service/tests/diagnostics/snapshots/features__diagnostics__unreachable__folded_block_if.snap
---
source: crates/service/tests/diagnostics/unreachable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 6
        },
        "end": {
          "line": 9,
          "character": 13
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    }
  ]
}
