crates/service/tests/diagnostics/snapshots/features__diagnostics__unreachable__global.snap
---
source: crates/service/tests/diagnostics/unreachable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 15
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 15
        }
      },
      "severity": 1,
      "code": "global-expr",
      "source": "wat",
      "message": "expression must be constant in global"
    }
  ]
}
