crates/service/tests/diagnostics/snapshots/features__diagnostics__unreachable__infinite_loop.snap
---
source: crates/service/tests/diagnostics/unreachable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 64,
          "character": 19
        },
        "end": {
          "line": 64,
          "character": 20
        }
      },
      "severity": 1,
      "code": "uninit",
      "source": "wat",
      "message": "local `1` is read before being initialized"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 4
        },
        "end": {
          "line": 6,
          "character": 7
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 4
        },
        "end": {
          "line": 13,
          "character": 7
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 39,
          "character": 4
        },
        "end": {
          "line": 39,
          "character": 7
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 43,
          "character": 4
        },
        "end": {
          "line": 43,
          "character": 9
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 48,
          "character": 8
        },
        "end": {
          "line": 49,
          "character": 25
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 50,
          "character": 4
        },
        "end": {
          "line": 50,
          "character": 9
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    }
  ]
}
