crates/service/tests/diagnostics/snapshots/features__diagnostics__unreachable__merge_range.snap
---
source: crates/service/tests/diagnostics/unreachable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 6,
          "character": 7
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 4
        },
        "end": {
          "line": 14,
          "character": 7
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 21,
          "character": 13
        },
        "end": {
          "line": 21,
          "character": 20
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 24,
          "character": 12
        },
        "end": {
          "line": 24,
          "character": 25
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 20,
          "character": 11
        },
        "end": {
          "line": 20,
          "character": 18
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 25,
          "character": 10
        },
        "end": {
          "line": 25,
          "character": 23
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 19,
          "character": 9
        },
        "end": {
          "line": 19,
          "character": 16
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 26,
          "character": 8
        },
        "end": {
          "line": 26,
          "character": 21
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 18,
          "character": 7
        },
        "end": {
          "line": 18,
          "character": 14
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 27,
          "character": 6
        },
        "end": {
          "line": 30,
          "character": 25
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 5
        },
        "end": {
          "line": 17,
          "character": 12
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 34,
          "character": 4
        },
        "end": {
          "line": 37,
          "character": 9
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 43,
          "character": 8
        },
        "end": {
          "line": 44,
          "character": 13
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 40,
          "character": 7
        },
        "end": {
          "line": 40,
          "character": 10
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 39,
          "character": 5
        },
        "end": {
          "line": 39,
          "character": 8
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    }
  ]
}
