crates/service/tests/diagnostics/snapshots/features__diagnostics__unreachable__nested_if.snap
---
source: crates/service/tests/diagnostics/unreachable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 6
        },
        "end": {
          "line": 7,
          "character": 9
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 22,
          "character": 6
        },
        "end": {
          "line": 22,
          "character": 9
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 30,
          "character": 6
        },
        "end": {
          "line": 30,
          "character": 9
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 32,
          "character": 4
        },
        "end": {
          "line": 32,
          "character": 7
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    }
  ]
}
