crates/service/tests/diagnostics/snapshots/features__diagnostics__unreachable__return_call_ref.snap
---
source: crates/service/tests/diagnostics/unreachable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 4
        },
        "end": {
          "line": 6,
          "character": 7
        }
      },
      "severity": 2,
      "code": "unreachable",
      "source": "wat",
      "message": "unreachable code",
      "tags": [
        1
      ]
    }
  ]
}
